<resources>
    <string name="app_name">ColorChangerZP182</string>
    <string name="button_red">Red</string>
    <string name="button_green">Green</string>
    <string name="button_blue">Blue</string>
    <string name="button_yellow">Yellow</string>
    <string name="vardasPavarde">Indrė Rakštelė</string>
    <string name="textForRedColor">Color Red</string>
    <string name="textForGreenColor">Color Green</string>
    <string name="textForBlueColor">Color Blue</string>
    <string name="textForYellowColor">Color Yellow</string>
</resources>
