<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayaut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/colorGreenLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_for_Green_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="45dp"
            android:text="@string/textForGreenColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorRedLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_for_Red_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="50dp"
            android:text="@string/textForRedColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorBlueLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_for_Blue_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="50dp"
            android:text="@string/textForBlueColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorYellowLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="299dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_for_Yellow_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="50dp"
            android:text="@string/textForYellowColor" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp">

        <TableRow>

            <Button
                android:id="@+id/buttonBlue"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_weight="1"
                android:text="@string/button_blue" />

            <Button
                android:id="@+id/buttonGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_weight="1"
                android:text="@string/button_green" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonRed"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Red" />


            <Button
                android:id="@+id/buttonYellow"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_yellow" />


        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/vardasPavarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:text="@string/vardasPavarde"
        android:textStyle="bold" />

</RelativeLayout>